vlib/v/checker/tests/for_loop_range_inclusive_err.vv
for a in 1...10 {
    println(a)
}
